force-app/main/default/objects/Service_Line_Item__c/Service_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Service Line Item</label>
    <nameField>
        <displayFormat>SLI-{00000}</displayFormat>
        <label>Service Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>