force-app/main/default/objects/Service_Line_Item__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Providers can deactivate service line items which allows them to zero all cells in that column</description>
    <inlineHelpText>If a provider has deactivated the service line item</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>