force-app/main/default/objects/Service_Line_Item__c/fields/Aged_Care_Planning_Region__c.field-meta.xml
<CustomField>
    <fullName>Aged_Care_Planning_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aged Care Planning Region</label>
    <referenceTo>Aged_Care_Planning_Region__c</referenceTo>
    <relationshipLabel>Service Line Items</relationshipLabel>
    <relationshipName>Service_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>