force-app/main/default/objects/Service_Line_Item__c/fields/Date_last_checked_by_Stewart_Brown__c.field-meta.xml
<CustomField>
    <fullName>Date_last_checked_by_Stewart_Brown__c</fullName>
    <label>Date last checked by StewartBrown</label>
    <type>Date</type>
</CustomField>