force-app/main/default/objects/Service_Line_Item__c/fields/Date_last_notified__c.field-meta.xml
<CustomField>
    <fullName>Date_last_notified__c</fullName>
    <label>Date last notified</label>
    <type>Date</type>
</CustomField>