force-app/main/default/objects/Service_Line_Item__c/fields/Date_last_RC_outcome_recorded__c.field-meta.xml
<CustomField>
    <fullName>Date_last_RC_outcome_recorded__c</fullName>
    <label>Date last RC outcome recorded</label>
    <type>Date</type>
</CustomField>