force-app/main/default/objects/Service_Line_Item__c/fields/Date_last_reissued__c.field-meta.xml
<CustomField>
    <fullName>Date_last_reissued__c</fullName>
    <label>Date last reissued</label>
    <type>Date</type>
</CustomField>