force-app/main/default/objects/Service_Line_Item__c/fields/Reasonableness_Check__c.field-meta.xml
<CustomField>
    <fullName>Reasonableness_Check__c</fullName>
    <label>Reasonableness Check Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>1, 2</fullName>
            </value>
            <value>
                <fullName>1, 3</fullName>
            </value>
            <value>
                <fullName>1, 4</fullName>
            </value>
            <value>
                <fullName>2, 3</fullName>
            </value>
            <value>
                <fullName>2, 4</fullName>
            </value>
            <value>
                <fullName>3, 4</fullName>
            </value>
            <value>
                <fullName>1, 2, 3</fullName>
            </value>
            <value>
                <fullName>1, 2, 4</fullName>
            </value>
            <value>
                <fullName>1, 3, 4</fullName>
            </value>
            <value>
                <fullName>2, 3, 4</fullName>
            </value>
            <value>
                <fullName>1, 2, 3, 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>