force-app/main/default/objects/Service_Line_Item__c/fields/Reasonableness_Check_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Reasonableness_Check_Outcome__c</fullName>
    <label>Reasonableness Check Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For review</fullName>
            </value>
            <value>
                <fullName>Review not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>