force-app/main/default/objects/Service_Line_Item__c/fields/Reasonableness_Check_Outcome_comments__c.field-meta.xml
<CustomField>
    <fullName>Reasonableness_Check_Outcome_comments__c</fullName>
    <label>Reasonableness Check Outcome comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>