force-app/main/default/objects/Service_Line_Item__c/fields/Service_Label__c.field-meta.xml
<CustomField>
    <fullName>Service_Label__c</fullName>
    <formula>Service_Region__c +  TEXT(Service_Category__c) + Service__r.Name</formula>
    <label>Service Label</label>
    <type>Text</type>
</CustomField>