force-app/main/default/objects/Service_Line_Item__c/fields/Service_Region__c.field-meta.xml
<CustomField>
    <fullName>Service_Region__c</fullName>
    <label>Service_Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>