force-app/main/default/objects/Service_Line_Item__c/fields/SLI_DM_Key__c.field-meta.xml
<CustomField>
    <fullName>SLI_DM_Key__c</fullName>
    <externalId>true</externalId>
    <label>SLI DM Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>