force-app/main/default/objects/Service_Line_Item__c/validationRules/Date_must_not_be_future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_must_not_be_future_Date</fullName>
    <active>true</active>
    <description>Date last checked by StewartBrown must not be future date</description>
    <errorConditionFormula>Date_last_checked_by_Stewart_Brown__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_last_checked_by_Stewart_Brown__c</errorDisplayField>
    <errorMessage>You must select a date that is not a future date.</errorMessage>
</ValidationRule>