force-app/main/default/objects/Service_Line_Item__c/validationRules/Must_Provide_Service_or_Service_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Provide_Service_or_Service_Category</fullName>
    <active>true</active>
    <description>Cannot create a service line item without one of the two fields being populated</description>
    <errorConditionFormula>AND(ISBLANK( TEXT(Service_Category__c)),ISBLANK( Service_Region__c), ISBLANK(Service__c))</errorConditionFormula>
    <errorMessage>You must provide either a service or a service category or a service region</errorMessage>
</ValidationRule>