force-app/main/default/objects/Service_Line_Item__c/validationRules/RC_Code_and_RC_Comments_for_For_Review.validationRule-meta.xml
<ValidationRule>
    <fullName>RC_Code_and_RC_Comments_for_For_Review</fullName>
    <active>true</active>
    <description>PBI - 276410</description>
    <errorConditionFormula>AND(ISPICKVAL( Reasonableness_Check_Outcome__c ,&quot;For review&quot;),LEN( Reasonableness_Check_Outcome_comments__c )= 0)</errorConditionFormula>
    <errorDisplayField>Reasonableness_Check_Outcome_comments__c</errorDisplayField>
    <errorMessage>A service with &quot;For review&quot; as the Reasonableness check outcome must include a Reasonableness check outcome comment</errorMessage>
</ValidationRule>