force-app/main/default/objects/Service_Line_Item__c/validationRules/RC_Code_cannot_be_NULL_for_in_review_SLI.validationRule-meta.xml
<ValidationRule>
    <fullName>RC_Code_cannot_be_NULL_for_in_review_SLI</fullName>
    <active>true</active>
    <description>PBI</description>
    <errorConditionFormula>AND(ISPICKVAL( Reasonableness_Check_Outcome__c ,&quot;For review&quot;),ISBLANK( TEXT( Reasonableness_Check__c )))</errorConditionFormula>
    <errorDisplayField>Reasonableness_Check__c</errorDisplayField>
    <errorMessage>A service with &quot;For review&quot; as the Reasonableness check outcome must include a Reasonableness check code</errorMessage>
</ValidationRule>